Site First time

--- a/FunPage.html
+++ b/FunPage.html
@@ -8,7 +8,7 @@
     
         <a href= "About-me.html">About me</a>
         <a href= "Resume.html">Resume</a>
-        <a href= "mysite.html">Home</a>
+        <a href= "index.html">Home</a>
     </div>
     </header>    
 <head>
