--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,7 @@
     <div class= nav>   
     
         <a href= "About-me.html">About me</a>
-        <a href= "mysite.html">Home</a>
+        <a href= "index.html">Home</a>
         <a href= "FunPage.html">Fun Page</a>
         
     </div>
