--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <img src="https://www.ffc8.org/cms/lib/CO01900636/Centricity/Domain/44/STEM.jpg" class= "box" width="250" height="210"/> 
     <img src="http://www.rljit.in/image/cs.png" class= "box" width="250" height="210"/>
     <img src="https://storage.googleapis.com/zopnow-static/images/products/320/fresh-apple-red-delicious-v-500-g.png" class= "box" width="250" height="210" />
+    <img src="" class= "box" width="250" height="210" />
+    <img src="" class= "box" width="250" height="210" />
+    <img src="" class= "box" width="250" height="210" />
     
     </div>
     
