--- a/About-me.html
+++ b/About-me.html
@@ -26,8 +26,10 @@
     <p class = "p4">Some Personal career goals that I have are Software Developer, Web Developer, Database Administrator, Paleontologist, and Visual Effects Artist. I want to have a career that involves computers and coding as my goal because I like the frustration that I feel when some parts of coding do not function correctly and it just gives me more determination to keep going and not give up, kind of like adrenaline. I have Paleontologist as a career goal because I have always been fascinated with dinosaurs since I was 4 years old and I always thought that it would be really cool if I found a new species of dinosaur. I plan on having a career that involves being a software developer or a database administrator or a web developer by 
         </p>
     
-    <br/><img src = "https://images.gr-assets.com/books/1401387247l/19821.jpg" class= "img" width="180" height="295" /> 
-    <br/><img src="https://images-na.ssl-images-amazon.com/images/M/MV5BZTQzNmEwZTMtZGNkNC00YjQ5LThhYzMtZTBhNzUzODI5ZjRjXkEyXkFqcGdeQXVyMjM5NzU3OTM@._V1_UY268_CR16,0,182,268_AL_.jpg" class= "img" width="160" height="170"/>
-
+    
+   <div class= images>
+        <br/><img src = "https://images.gr-assets.com/books/1401387247l/19821.jpg"   width="180" height="295" /> 
+        <br/><img src="https://images-na.ssl-images-amazon.com/images/M/MV5BZTQzNmEwZTMtZGNkNC00YjQ5LThhYzMtZTBhNzUzODI5ZjRjXkEyXkFqcGdeQXVyMjM5NzU3OTM@._V1_UY268_CR16,0,182,268_AL_.jpg"  width="160" height="170"/>
+   </div>
 </body>    
 </html>    
